--- a/components/grid/index.css
+++ b/components/grid/index.css
@@ -25,8 +25,24 @@
   margin-bottom: calc(var(--Grid-gutter) * -1);
 }
 
-.Grid--slim {
+.Grid--xs {
   --Grid-gutter: 0.625rem;
+}
+
+.Grid--sm {
+  --Grid-gutter: 1rem;
+}
+
+@media (min-width: 1000px), print {
+  .Grid--sm {
+    --Grid-gutter: 1.5rem;
+  }
+}
+
+@media (min-width: 1200px), print {
+  .Grid--sm {
+    --Grid-gutter: 2rem;
+  }
 }
 
 .Grid + .Grid {
