--- a/components/headline/index.css
+++ b/components/headline/index.css
@@ -7,14 +7,16 @@
   background-color: rgba(var(--color-gray-light), 0.6);
 }
 
-/**
- * 1. 16/9 aspect ratio
- */
-
 .Headline::before {
   content: "";
   display: block;
-  padding-top: 56.25%; /* 1 */
+  padding-top: 120%;
+}
+
+@media (min-width: 600px) {
+  .Headline::before {
+    padding-top: 56.25%;
+  }
 }
 
 /**
@@ -37,9 +39,21 @@
   }
 }
 
+.Headline:not(.Headline--highlight) .Headline-content {
+  background-image: var(--figure-gradient);
+}
+
 /**
  * Text
  */
+
+.Headline-body {
+  max-width: 38rem;
+}
+
+.Headline:not(.Headline--highlight) .Headline-text {
+  color: rgb(255, 255, 255);
+}
 
 .Headline-highlight {
   display: inline-block;
